--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
   "name": "wa-gateway",
   "version": "1.0.0",
+  "description": "WhatsApp Gateway with whatsapp-web.js",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "axios": "^1.10.0",
-    "body-parser": "^2.2.0",
-    "express": "^5.1.0",
-    "mime-types": "^3.0.1",
+    "axios": "^1.6.8",
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
+    "mime-types": "^2.1.35",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.31.0"
+    "whatsapp-web.js": "^1.23.0"
   }
 }
